--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
+    "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^5.11.8",
     "next": "10.0.4",
+    "postcss": "^8.2.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2"
   }
 }
